# repo_case

./: .gitignore  Dockerfile  README.md  docker-compose.yml  etl.py  pyproject.toml  requirements.txt
sql/: 01_schema.sql  02_views.sql
src/: etl.py  models.py  views.py
